crates/cribo/tests/snapshots/bundled_code@xfail_bundle_third_party_enumerated_plugin.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_enumerated_plugin/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

"""Distributions discovered by global enumeration reach requirements.\n\nThe plugin provider is never imported directly: it is located through its\nentry-point group, so the isolated deployment must still install it.\n"""
import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
entry_points = _cribo.importlib.metadata.entry_points
plugins = [entry for entry in _cribo.importlib.metadata.entry_points(group="demo.plugins")]
if not plugins:
    raise SystemExit("plugin provider not discovered")
plugin = plugins[0].load()
print("plugin:", plugin())
